Changed the css for lecturer